# life-sim-second-approach

./: .flake8  .gitignore  CLAUDE.md  LICENSE  README.md  pyproject.toml  pytest.ini  requirements.txt  setup.py
.cursor/rules/: agent-role.mdc  clean-architecture.mdc  development-methodology.mdc  pygame-guidelines.mdc  python-development-rules.mdc
.github/workflows/: lint.yml  test.yml
src/: config.py  main.py
src/domain/entities/: __init__.py  grid.py
src/domain/value_objects/: __init__.py  grid_dimensions.py  grid_position.py
src/interfaces/pygame_adapter/rendering/: coordinate_transformer.py  grid_display.py  grid_renderer.py
src/interfaces/pygame_adapter/ui/: __init__.py  command_column.py  layout_manager.py
tests/: __init__.py  conftest.py
tests/domain/: test_grid.py
tests/domain/value_objects/: test_grid_dimensions.py  test_grid_position.py
tests/integration/: test_ui_integration.py
tests/interfaces/pygame_adapter/rendering/: __init__.py  test_coordinate_transformer.py  test_grid_display.py  test_grid_renderer.py
tests/interfaces/pygame_adapter/ui/: __init__.py  test_command_column.py  test_layout_manager.py
tests/unit/: test_config.py  test_game_loop.py
